# MalikaEXPerimental

./: .gitignore  MCP_INSTALLATION_COMPLETE.md  README.md  admin_pages_restored.md  install_stage1.sh  migrate_db.py  migrations.sql  update_design.sh
backend/: check_stage2.sh  main.py  models.py  models.py.backup  pyproject.toml  requirements.txt  websocket.py
frontend/: ADMIN_PAGES.md  index.html  install_stage2.sh  install_stage4.sh  install_stage6_7.sh  install_stage8_9  package.json  pnpm-lock.yaml  project-audit.sh  tailwind.config.js  ui_polish.sh
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminHeader.jsx
frontend/src/hooks/: useSocket.js
frontend/src/pages/: BookingPage.jsx  CheckPage.jsx  CheckoutPage.jsx  Dashboard.jsx  Dashboard.jsx.backup.1759597413  GuestMenu.jsx  Login.jsx  MenuPage.jsx  MyOrders.jsx  OrderSuccess.jsx  ProfilePage.jsx  QRPage.jsx  Register.jsx  TableWelcome.jsx
frontend/src/pages/admin/: Analytics.jsx  Halls.jsx  Menu.jsx  QRGenerator.jsx  Reservations.jsx  Restaurants.jsx  TableLinks.jsx
frontend/src/pages/waiter/: WaiterDashboard.jsx
scripts/: backup_database.sh  cleanup_logs.sh  generate_password_hash.py  health_check.sh  quick_status.sh  update_stage1.sh  update_stage2.sh  update_stage4.sh  update_stage6_7.sh
